Update project settings. Add cache redis Change global urls name Fix error accounts orders

--- a/pc_shop/.env
+++ b/pc_shop/.env
@@ -1,3 +1,9 @@
 SECRET_KEY='django-insecure-4yspz9x4o$x($^3%%&=(2mq1#06)zadxh#+onq!&j78=nc#u#='
 DEBUG=True
 ALLOWED_HOSTS=127.0.0.1
+
+DB_NAME='pc_shop'
+DB_USER='pc_shop_user'
+DB_PASSWORD='pc_shop_password'
+DB_HOST='localhost'
+DB_PORT='5432'
