Delete Redis/Celery/Docker (Local using)

--- a/pc_shop/.env
+++ b/pc_shop/.env
@@ -7,12 +7,5 @@ ALLOWED_HOSTS=127.0.0.1
 POSTGRES_DB='pc_shop'
 POSTGRES_USER='pc_shop_user'
 POSTGRES_PASSWORD='pc_shop_password'
-POSTGRES_HOST='db'
+POSTGRES_HOST='localhost'
 POSTGRES_PORT='5432'
-
-# Redis
-REDIS_URL=redis://redis:6379/0
-
-# Celery
-CELERY_BROKER_URL=redis://redis:6379/0
-CELERY_RESULT_BACKEND=redis://redis:6379/0
